create payment-service in backend and frontend, redesign frontend

--- a/frontend/src/locales/cs/translation.json
+++ b/frontend/src/locales/cs/translation.json
@@ -1,80 +1,83 @@
 {
-  "appName": "Karate App",
+  "appName": "Aplikace Karate",
   "home": "Domů",
   "homeTitle": "Správa karate",
-  "homeDescription": "Moderní systém pro správu karate tréninků, klubů a stupňů pásů.",
+  "homeDescription": "Moderní systém pro správu tréninků, klubů a pásů karate.",
+  "dashboard": "Přehled",
+  "calendar": "Kalendář",
+  "settings": "Nastavení",
+  "languageSettings": "Jazyková nastavení",
+  "chooseLanguage": "Zvol preferovaný jazyk",
+  "language": "Jazyk",
+  "loading": "Načítání...",
   "saving": "Ukládání...",
   "saved": "Uloženo ✅",
-  "saveAndReturn": "Uložit a vrátit se na panel",
-  "dashboard": "Nástěnka",
-  "calendar": "Kalendář",
+  "save": "Uložit",
+  "saveFailed": "Uložení se nezdařilo",
+  "reset": "Resetovat",
+  "none": "Žádné",
+  "noResults": "Žádné výsledky",
+  "failedToLoad": "Nepodařilo se načíst",
+  "noPermission": "Nemáš oprávnění",
+  "goBack": "Zpět",
+  "submit": "Odeslat",
+  "cancel": "Zrušit",
+  "close": "Zavřít",
+  "details": "Detaily",
+  "backToList": "Zpět na seznam",
+  "searchFeatures": "Hledat funkce...",
+
   "quickOverview": "Rychlý přehled",
-  "totalTrainings": "Celkový počet tréninků",
-  "upcoming": "Nadcházející",
-  "lastSession": "Poslední trénink",
   "shortcuts": "Zkratky",
   "openCalendar": "Otevřít kalendář",
   "addNewTraining": "Přidat nový trénink",
   "upcomingTrainings": "Nadcházející tréninky",
-  "noTrainings": "Nejsou naplánovány žádné tréninky.",
-  "languageSettings": "Nastavení jazyka",
-  "chooseLanguage": "Vyberte preferovaný jazyk",
-  "language": "Jazyk",
-  "settings": "Nastavení",
   "admins": "Administrátoři",
   "users": "Uživatelé",
   "clubMembersOverview": "Přehled členů klubu",
-  "trainingCalendar": "Kalendář tréninků",
-  "loading": "Načítání...",
-  "prev": "← Předchozí",
-  "next": "Další →",
-  "today": "Dnes",
-  "noTrainingsOnThisDay": "Žádné tréninky v tento den.",
-  "pastTrainings": "Minulé tréninky",
-  "noPastTrainings": "Žádné minulé tréninky.",
-  "none": "Žádné",
+  "profile": "Profil",
+  "profileSettings": "Nastavení profilu",
+  "profileSettingsSubtitle": "Zobraz a uprav své osobní údaje.",
+  "dangerZone": "Nebezpečná zóna",
+  "deleteAccount": "Smazat účet",
+  "typeUsernameToConfirmDelete": "Pro potvrzení smazání účtu napiš své uživatelské jméno",
+  "confirmDeleteAccount": "Opravdu chceš trvale smazat účet?",
+  "failedToLoadUser": "Nepodařilo se načíst uživatele",
 
-  "createNewTraining": "Vytvořit nový trénink",
-  "description": "Popis",
-  "enterTrainingDescription": "Zadejte popis tréninku",
-  "dateAndTime": "Datum a čas",
-  "creating": "Vytvářím...",
-  "createTraining": "Vytvořit trénink",
-  "recentCreatedTrainings": "Nedávno vytvořené tréninky",
-  "noTrainingsYet": "Žádné tréninky zatím.",
-  "failedToCreateTraining": "Nepodařilo se vytvořit trénink",
-
-  "noValidClubSelected": "Není vybrán platný klub.",
-  "failedToFetchUsers": "Nepodařilo se načíst uživatele.",
-  "loadingUsers": "Načítám uživatele...",
-  "no": "Žádné",
-  "found": "nalezeno",
-
-  "username": "Uživatelské jméno",
-  "email": "Email",
-  "roles": "Role",
-  "karateRank": "Karate stupeň",
-
-  "selectKarateClub": "Vyberte karate klub",
+  "selectKarateClub": "Vyber klub karate",
   "login": "Přihlásit se",
   "password": "Heslo",
-  "loggingInAs": "Přihlašujete se jako",
-  "noClubSelected": "Nebyl vybrán žádný karate klub",
-  "loginFailed": "Přihlášení se nezdařilo. Zkontrolujte údaje a zkuste to znovu.",
+  "loggingInAs": "Přihlašování jako",
+  "noClubSelected": "Není vybrán žádný klub karate",
+  "loginFailed": "Přihlášení se nezdařilo. Zkontroluj údaje a zkus to znovu.",
   "register": "Registrovat se",
-  "registrationFailed": "Registrace se nezdařila. Zkuste to prosím znovu.",
+  "registrationFailed": "Registrace se nezdařila. Zkus to znovu.",
   "changeClub": "Změnit klub",
 
-  "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "Łódzké centrum Okinawa Shorin Ryu Karate a Kobudo",
-  "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Piaseczyński klub Okinawa Shorin Ryu Karate",
-  "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "Wołomiński klub Shorin Ryu Karate",
-  "MIECHOWSKI_KLUB_SHORIN_RYU_KARATE": "Miechowski klub Shorin Ryu Karate",
-  "LUBELSKA_AKADEMIA_SPORTU": "Lublinská akademie sportu",
-  "GDANSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Gdaňský klub Okinawa Shorin Ryu Karate",
-  "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "Tarnowská akademie Karate a Kobudo",
-  "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Klub Okinawa Karate Do Varšava",
+  "karateClubName": "Název klubu karate",
+  "fieldIsImmutable": "Toto pole nelze změnit",
+  "noValidClubSelected": "Není vybrán platný klub.",
+  "failedToFetchUsers": "Nepodařilo se načíst uživatele.",
+  "loadingUsers": "Načítání uživatelů...",
+  "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "Łódź Centrum Okinawa Shorin Ryu Karate a Kobudo",
+  "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Piaseczno Klub Okinawa Shorin Ryu Karate",
+  "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "Wołomin Klub Shorin Ryu Karate",
+  "MIECHOWSKI_KLUB_SHORIN_RYU_KARATE": "Miechów Klub Shorin Ryu Karate",
+  "LUBELSKA_AKADEMIA_SPORTU": "Lublinská sportovní akademie",
+  "GDANSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Gdaňsk Klub Okinawa Shorin Ryu Karate",
+  "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "Tarnów Akademie karate a kobudo",
+  "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Varšavský klub Okinawa Karate Do",
 
-  "selectKarateRank": "Vyberte karate stupeň",
+  "username": "Uživatelské jméno",
+  "email": "E-mail",
+  "roles": "Role",
+  "city": "Město",
+  "street": "Ulice",
+  "number": "Číslo",
+  "postalCode": "PSČ",
+
+  "selectKarateRank": "Vyber stupeň karate",
+  "karateRank": "Stupeň karate",
   "KYU_10": "10. Kyu",
   "KYU_9": "9. Kyu",
   "KYU_8": "8. Kyu",
@@ -96,8 +99,105 @@
   "DAN_9": "9. Dan",
   "DAN_10": "10. Dan",
 
-  "city": "Město",
-  "street": "Ulice",
-  "number": "Číslo domu",
-  "postalCode": "PSČ"
+  "trainingCalendar": "Kalendář tréninků",
+  "totalTrainings": "Celkem tréninků",
+  "upcoming": "Nadcházející",
+  "lastSession": "Poslední trénink",
+  "today": "Dnes",
+  "prev": "← Předchozí",
+  "next": "Další →",
+  "noTrainings": "Nejsou naplánovány žádné tréninky.",
+  "noTrainingsOnThisDay": "V tento den nejsou žádné tréninky.",
+  "pastTrainings": "Proběhlé tréninky",
+  "noPastTrainings": "Žádné proběhlé tréninky.",
+  "createNewTraining": "Vytvořit nový trénink",
+  "description": "Popis",
+  "enterTrainingDescription": "Zadej popis tréninku",
+  "dateAndTime": "Datum a čas",
+  "creating": "Vytváření...",
+  "createTraining": "Vytvořit trénink",
+  "recentCreatedTrainings": "Nedávno vytvořené tréninky",
+  "noTrainingsYet": "Zatím žádné tréninky.",
+  "failedToCreateTraining": "Nepodařilo se vytvořit trénink",
+  "failedToLoadTrainings": "Nepodařilo se načíst tréninky",
+
+  "myTrainings": "Moje tréninky",
+  "enrollmentsAdmin": "Přihlášky (admin)",
+  "enroll": "Přihlásit se",
+  "unenroll": "Odhlásit se",
+  "enrolled": "Přihlášen",
+  "byTraining": "Podle tréninku",
+  "byUser": "Podle uživatele",
+  "selectTraining": "Vyber trénink",
+  "enrollmentId": "ID přihlášky",
+  "userId": "ID uživatele",
+  "trainingId": "ID tréninku",
+  "startTime": "Začátek",
+  "endTime": "Konec",
+  "viewParticipants": "Zobrazit účastníky",
+  "loadParticipants": "Načíst účastníky",
+  "noParticipants": "Žádní účastníci",
+  "participant": "Účastník",
+  "participants": "Účastníci",
+  "enterUserIdToProceed": "Zadej ID uživatele pro pokračování",
+
+  "myFeedbacks": "Moje hodnocení",
+  "feedbacksAdmin": "Hodnocení (admin)",
+  "giveFeedback": "Přidat hodnocení",
+  "editFeedback": "Upravit hodnocení",
+  "giveOrEditFeedback": "Přidat nebo upravit hodnocení",
+  "feedback": "Hodnocení",
+  "feedbackId": "ID hodnocení",
+  "feedbackForTraining": "Hodnocení tréninku",
+  "feedbackSubmitted": "Hodnocení úspěšně odesláno",
+  "feedbackUpdated": "Hodnocení úspěšně aktualizováno",
+  "feedbackFailed": "Odeslání hodnocení se nezdařilo",
+  "feedbackComment": "Komentář",
+  "feedbackStars": "Hvězdičky",
+  "feedbackCreatedAt": "Vytvořeno",
+  "feedbackUpdatedAt": "Aktualizováno",
+  "noFeedbacksYet": "Zatím žádná hodnocení",
+  "noFeedbackForThisTraining": "Pro tento trénink zatím žádné hodnocení",
+  "feedbacksByTraining": "Hodnocení podle tréninku",
+  "feedbacksByUser": "Hodnocení podle uživatele",
+  "failedToLoadFeedback": "Nepodařilo se načíst hodnocení",
+  "stars": "Hvězdičky",
+  "comment": "Komentář",
+  "viewFeedback": "Zobrazit hodnocení",
+
+  "myPayments": "Moje platby",
+  "paymentsAdmin": "Platby (admin)",
+  "unpaidSummary": "Souhrn nedoplatků",
+  "unpaidForUser": "Nedoplatky uživatele",
+  "monthlyFee": "Měsíční poplatek",
+  "total": "Celkem",
+  "toPayNow": "K úhradě",
+  "currencyShort": "PLN",
+  "payNow": "Zaplatit nyní",
+  "noUnpaidMonths": "Žádné dlužné měsíce 🎉",
+  "paymentHistory": "Historie plateb",
+  "provider": "Poskytovatel",
+  "amount": "Částka",
+  "status": "Stav",
+  "createdAt": "Vytvořeno",
+  "paidAt": "Zaplaceno",
+  "months": "Měsíce",
+  "paymentCreateFailed": "Nepodařilo se vytvořit platbu",
+  "notLoggedIn": "Nepřihlášen",
+  "paymentStatus": "Stav platby",
+  "processing": "Zpracovává se",
+  "paymentCapturedOk": "Platba úspěšně potvrzena ✅",
+  "paymentAlreadyProcessed": "Tato platba již byla zpracována",
+  "paymentCaptureFailed": "Potvrzení platby se nezdařilo",
+  "goToMyPayments": "Přejít na moje platby",
+  "paymentCancelled": "Platba zrušena",
+  "youCancelledPayment": "Platbu jsi zrušil.",
+  "selectUser": "Vyber uživatele",
+  "load": "Načíst",
+  "bookManualPayment": "Zaúčtovat ručně",
+  "markAsPaidManually": "Označit jako zaplacené (ručně)",
+  "manualPaymentOk": "Ručně zadaná platba uložena",
+  "manualPaymentFailed": "Ručně zadanou platbu se nepodařilo uložit",
+  "noPaymentsYet": "Zatím žádné platby",
+  "date": "Datum"
 }
