--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -3,57 +3,46 @@
   "home": "Home",
   "homeTitle": "Karate Management",
   "homeDescription": "A modern system for managing karate trainings, clubs, and belt ranks.",
-  "saving": "Saving...",
-  "saved": "Saved ✅",
-  "saveAndReturn": "Save and return to dashboard",
   "dashboard": "Dashboard",
   "calendar": "Calendar",
+  "settings": "Settings",
+  "languageSettings": "Language Settings",
+  "chooseLanguage": "Choose preferred language",
+  "language": "Language",
+  "loading": "Loading...",
+  "saving": "Saving...",
+  "saved": "Saved ✅",
+  "save": "Save",
+  "saveFailed": "Saving failed",
+  "reset": "Reset",
+  "none": "None",
+  "noResults": "No results",
+  "failedToLoad": "Failed to load",
+  "noPermission": "You do not have permission",
+  "goBack": "Go back",
+  "submit": "Submit",
+  "cancel": "Cancel",
+  "close": "Close",
+  "details": "Details",
+  "backToList": "Back to list",
+  "searchFeatures": "Search features...",
+
   "quickOverview": "Quick Overview",
-  "totalTrainings": "Total Trainings",
-  "upcoming": "Upcoming",
-  "lastSession": "Last Session",
   "shortcuts": "Shortcuts",
   "openCalendar": "Open Calendar",
   "addNewTraining": "Add New Training",
   "upcomingTrainings": "Upcoming Trainings",
-  "noTrainings": "No trainings scheduled.",
-  "languageSettings": "Language Settings",
-  "chooseLanguage": "Choose preferred language",
-  "language": "Language",
-  "settings": "Settings",
   "admins": "Admins",
   "users": "Users",
   "clubMembersOverview": "Club Members Overview",
-  "trainingCalendar": "Training Calendar",
-  "loading": "Loading...",
-  "prev": "← Previous",
-  "next": "Next →",
-  "today": "Today",
-  "noTrainingsOnThisDay": "No trainings on this day.",
-  "pastTrainings": "Past Trainings",
-  "noPastTrainings": "No past trainings.",
-  "none": "None",
-
-  "createNewTraining": "Create New Training",
-  "description": "Description",
-  "enterTrainingDescription": "Enter training description",
-  "dateAndTime": "Date and Time",
-  "creating": "Creating...",
-  "createTraining": "Create Training",
-  "recentCreatedTrainings": "Recently Created Trainings",
-  "noTrainingsYet": "No trainings yet.",
-  "failedToCreateTraining": "Failed to create training",
-
-  "noValidClubSelected": "No valid club selected.",
-  "failedToFetchUsers": "Failed to fetch users.",
-  "loadingUsers": "Loading users...",
-  "no": "No",
-  "found": "found",
-
-  "username": "Username",
-  "email": "Email",
-  "roles": "Roles",
-  "karateRank": "Karate Rank",
+  "profile": "Profile",
+  "profileSettings": "Profile settings",
+  "profileSettingsSubtitle": "View and update your personal details.",
+  "dangerZone": "Danger zone",
+  "deleteAccount": "Delete account",
+  "typeUsernameToConfirmDelete": "Type your username to confirm account deletion",
+  "confirmDeleteAccount": "Are you sure you want to permanently delete your account?",
+  "failedToLoadUser": "Failed to load user",
 
   "selectKarateClub": "Select Karate Club",
   "login": "Login",
@@ -65,6 +54,11 @@
   "registrationFailed": "Registration failed. Please try again.",
   "changeClub": "Change Club",
 
+  "karateClubName": "Karate club name",
+  "fieldIsImmutable": "This field cannot be changed",
+  "noValidClubSelected": "No valid club selected.",
+  "failedToFetchUsers": "Failed to fetch users.",
+  "loadingUsers": "Loading users...",
   "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "Łódź Okinawa Shorin Ryu Karate and Kobudo Center",
   "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Piaseczno Okinawa Shorin Ryu Karate Club",
   "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "Wołomin Shorin Ryu Karate Club",
@@ -74,7 +68,16 @@
   "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "Tarnów Karate and Kobudo Academy",
   "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Warsaw Okinawa Karate Do Club",
 
+  "username": "Username",
+  "email": "Email",
+  "roles": "Roles",
+  "city": "City",
+  "street": "Street",
+  "number": "Number",
+  "postalCode": "Postal Code",
+
   "selectKarateRank": "Select Karate Rank",
+  "karateRank": "Karate Rank",
   "KYU_10": "10th Kyu",
   "KYU_9": "9th Kyu",
   "KYU_8": "8th Kyu",
@@ -96,8 +99,105 @@
   "DAN_9": "9th Dan",
   "DAN_10": "10th Dan",
 
-  "city": "City",
-  "street": "Street",
-  "number": "Number",
-  "postalCode": "Postal Code"
+  "trainingCalendar": "Training Calendar",
+  "totalTrainings": "Total Trainings",
+  "upcoming": "Upcoming",
+  "lastSession": "Last Session",
+  "today": "Today",
+  "prev": "← Previous",
+  "next": "Next →",
+  "noTrainings": "No trainings scheduled.",
+  "noTrainingsOnThisDay": "No trainings on this day.",
+  "pastTrainings": "Past Trainings",
+  "noPastTrainings": "No past trainings.",
+  "createNewTraining": "Create New Training",
+  "description": "Description",
+  "enterTrainingDescription": "Enter training description",
+  "dateAndTime": "Date and Time",
+  "creating": "Creating...",
+  "createTraining": "Create Training",
+  "recentCreatedTrainings": "Recently Created Trainings",
+  "noTrainingsYet": "No trainings yet.",
+  "failedToCreateTraining": "Failed to create training",
+  "failedToLoadTrainings": "Failed to load trainings",
+
+  "myTrainings": "My trainings",
+  "enrollmentsAdmin": "Enrollments (admin)",
+  "enroll": "Enroll",
+  "unenroll": "Unenroll",
+  "enrolled": "Enrolled",
+  "byTraining": "By training",
+  "byUser": "By user",
+  "selectTraining": "Select training",
+  "enrollmentId": "Enrollment ID",
+  "userId": "User ID",
+  "trainingId": "Training ID",
+  "startTime": "Start time",
+  "endTime": "End time",
+  "viewParticipants": "View participants",
+  "loadParticipants": "Load participants",
+  "noParticipants": "No participants",
+  "participant": "Participant",
+  "participants": "Participants",
+  "enterUserIdToProceed": "Enter user ID to proceed",
+
+  "myFeedbacks": "My feedbacks",
+  "feedbacksAdmin": "Feedbacks (admin)",
+  "giveFeedback": "Give feedback",
+  "editFeedback": "Edit feedback",
+  "giveOrEditFeedback": "Give or edit feedback",
+  "feedback": "Feedback",
+  "feedbackId": "Feedback ID",
+  "feedbackForTraining": "Feedback for training",
+  "feedbackSubmitted": "Feedback submitted successfully",
+  "feedbackUpdated": "Feedback updated successfully",
+  "feedbackFailed": "Failed to submit feedback",
+  "feedbackComment": "Comment",
+  "feedbackStars": "Stars",
+  "feedbackCreatedAt": "Created at",
+  "feedbackUpdatedAt": "Updated at",
+  "noFeedbacksYet": "No feedbacks yet",
+  "noFeedbackForThisTraining": "No feedback for this training yet",
+  "feedbacksByTraining": "Feedbacks by training",
+  "feedbacksByUser": "Feedbacks by user",
+  "failedToLoadFeedback": "Failed to load feedback",
+  "stars": "Stars",
+  "comment": "Comment",
+  "viewFeedback": "View feedback",
+
+  "myPayments": "My payments",
+  "paymentsAdmin": "Payments (Admin)",
+  "unpaidSummary": "Unpaid summary",
+  "unpaidForUser": "Unpaid for user",
+  "monthlyFee": "Monthly fee",
+  "total": "Total",
+  "toPayNow": "To pay now",
+  "currencyShort": "PLN",
+  "payNow": "Pay now",
+  "noUnpaidMonths": "No unpaid months 🎉",
+  "paymentHistory": "Payment history",
+  "provider": "Provider",
+  "amount": "Amount",
+  "status": "Status",
+  "createdAt": "Created at",
+  "paidAt": "Paid at",
+  "months": "Months",
+  "paymentCreateFailed": "Failed to create payment",
+  "notLoggedIn": "Not logged in",
+  "paymentStatus": "Payment status",
+  "processing": "Processing",
+  "paymentCapturedOk": "Payment captured successfully ✅",
+  "paymentAlreadyProcessed": "This payment was already processed",
+  "paymentCaptureFailed": "Payment capture failed",
+  "goToMyPayments": "Go to my payments",
+  "paymentCancelled": "Payment cancelled",
+  "youCancelledPayment": "You cancelled the payment.",
+  "selectUser": "Select user",
+  "load": "Load",
+  "bookManualPayment": "Book manual payment",
+  "markAsPaidManually": "Mark as paid (manual)",
+  "manualPaymentOk": "Manual payment saved",
+  "manualPaymentFailed": "Manual payment failed",
+  "noPaymentsYet": "No payments yet",
+  "date": "Date"
 }
