--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,80 +1,83 @@
 {
-  "appName": "Karate App",
+  "appName": "Application Karate",
   "home": "Accueil",
-  "homeTitle": "Gestion du Karate",
-  "homeDescription": "Un système moderne pour gérer les entraînements de karaté, les clubs et les grades.",
-  "saving": "Enregistrement...",
-  "saved": "Enregistré ✅",
-  "saveAndReturn": "Enregistrer et revenir au tableau de bord",
+  "homeTitle": "Gestion du karaté",
+  "homeDescription": "Un système moderne pour gérer les entraînements, les clubs et les grades de karaté.",
   "dashboard": "Tableau de bord",
   "calendar": "Calendrier",
+  "settings": "Paramètres",
+  "languageSettings": "Paramètres de langue",
+  "chooseLanguage": "Choisir la langue préférée",
+  "language": "Langue",
+  "loading": "Chargement...",
+  "saving": "Enregistrement...",
+  "saved": "Enregistré ✅",
+  "save": "Enregistrer",
+  "saveFailed": "Échec de l’enregistrement",
+  "reset": "Réinitialiser",
+  "none": "Aucun",
+  "noResults": "Aucun résultat",
+  "failedToLoad": "Échec du chargement",
+  "noPermission": "Vous n’avez pas l’autorisation",
+  "goBack": "Retour",
+  "submit": "Envoyer",
+  "cancel": "Annuler",
+  "close": "Fermer",
+  "details": "Détails",
+  "backToList": "Retour à la liste",
+  "searchFeatures": "Rechercher des fonctions...",
+
   "quickOverview": "Aperçu rapide",
-  "totalTrainings": "Nombre total d'entraînements",
-  "upcoming": "À venir",
-  "lastSession": "Dernière session",
   "shortcuts": "Raccourcis",
   "openCalendar": "Ouvrir le calendrier",
-  "addNewTraining": "Ajouter un nouvel entraînement",
+  "addNewTraining": "Ajouter un entraînement",
   "upcomingTrainings": "Entraînements à venir",
-  "noTrainings": "Aucun entraînement prévu.",
-  "languageSettings": "Paramètres de langue",
-  "chooseLanguage": "Choisissez votre langue préférée",
-  "language": "Langue",
-  "settings": "Paramètres",
   "admins": "Administrateurs",
   "users": "Utilisateurs",
-  "clubMembersOverview": "Aperçu des membres du club",
-  "trainingCalendar": "Calendrier d'entraînement",
-  "loading": "Chargement...",
-  "prev": "← Précédent",
-  "next": "Suivant →",
-  "today": "Aujourd'hui",
-  "noTrainingsOnThisDay": "Aucun entraînement ce jour-là.",
-  "pastTrainings": "Entraînements passés",
-  "noPastTrainings": "Aucun entraînement passé.",
-  "none": "Aucun",
+  "clubMembersOverview": "Vue d’ensemble des membres du club",
+  "profile": "Profil",
+  "profileSettings": "Paramètres du profil",
+  "profileSettingsSubtitle": "Afficher et mettre à jour vos informations personnelles.",
+  "dangerZone": "Zone de danger",
+  "deleteAccount": "Supprimer le compte",
+  "typeUsernameToConfirmDelete": "Saisissez votre nom d’utilisateur pour confirmer la suppression",
+  "confirmDeleteAccount": "Voulez-vous vraiment supprimer définitivement votre compte ?",
+  "failedToLoadUser": "Échec du chargement de l’utilisateur",
 
-  "createNewTraining": "Créer un nouvel entraînement",
-  "description": "Description",
-  "enterTrainingDescription": "Entrez la description de l'entraînement",
-  "dateAndTime": "Date et heure",
-  "creating": "Création...",
-  "createTraining": "Créer l'entraînement",
-  "recentCreatedTrainings": "Entraînements récemment créés",
-  "noTrainingsYet": "Aucun entraînement pour le moment.",
-  "failedToCreateTraining": "Échec de la création de la séance d'entraînement",
-
-  "noValidClubSelected": "Aucun club valide sélectionné.",
-  "failedToFetchUsers": "Échec de récupération des utilisateurs.",
-  "loadingUsers": "Chargement des utilisateurs...",
-  "no": "Aucun",
-  "found": "trouvé",
-
-  "username": "Nom d'utilisateur",
-  "email": "Email",
-  "roles": "Rôles",
-  "karateRank": "Grade de karaté",
-
-  "selectKarateClub": "Sélectionnez un club de karaté",
-  "login": "Connexion",
+  "selectKarateClub": "Choisir un club de karaté",
+  "login": "Se connecter",
   "password": "Mot de passe",
   "loggingInAs": "Connexion en tant que",
   "noClubSelected": "Aucun club de karaté sélectionné",
-  "loginFailed": "Échec de la connexion. Vérifiez vos informations et réessayez.",
-  "register": "S'inscrire",
-  "registrationFailed": "L'inscription a échoué. Veuillez réessayer.",
+  "loginFailed": "Échec de la connexion. Vérifiez vos identifiants et réessayez.",
+  "register": "S’inscrire",
+  "registrationFailed": "Échec de l’inscription. Veuillez réessayer.",
   "changeClub": "Changer de club",
 
-  "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "Centre de Łódź Okinawa Shorin Ryu Karate et Kobudo",
-  "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Club Piaseczyński Okinawa Shorin Ryu Karate",
-  "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "Club Wołomiński Shorin Ryu Karate",
-  "MIECHOWSKI_KLUB_SHORIN_RYU_KARATE": "Club Miechowski Shorin Ryu Karate",
-  "LUBELSKA_AKADEMIA_SPORTU": "Académie sportive de Lublin",
-  "GDANSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Club de Gdańsk Okinawa Shorin Ryu Karate",
-  "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "Académie de Tarnów Karate et Kobudo",
-  "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Club Okinawa Karate Do Varsovie",
+  "karateClubName": "Nom du club de karaté",
+  "fieldIsImmutable": "Ce champ ne peut pas être modifié",
+  "noValidClubSelected": "Aucun club valide sélectionné.",
+  "failedToFetchUsers": "Échec du chargement des utilisateurs.",
+  "loadingUsers": "Chargement des utilisateurs...",
+  "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "Centre Łódź Okinawa Shorin Ryu Karaté et Kobudo",
+  "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Club de karaté Piaseczno Okinawa Shorin Ryu",
+  "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "Club de karaté Wołomin Shorin Ryu",
+  "MIECHOWSKI_KLUB_SHORIN_RYU_KARATE": "Club de karaté Miechów Shorin Ryu",
+  "LUBELSKA_AKADEMIA_SPORTU": "Académie des sports de Lublin",
+  "GDANSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Club de karaté Gdańsk Okinawa Shorin Ryu",
+  "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "Académie de karaté et kobudo de Tarnów",
+  "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Club Okinawa Karate Do de Varsovie",
 
-  "selectKarateRank": "Sélectionnez un grade de karaté",
+  "username": "Nom d’utilisateur",
+  "email": "E-mail",
+  "roles": "Rôles",
+  "city": "Ville",
+  "street": "Rue",
+  "number": "Numéro",
+  "postalCode": "Code postal",
+
+  "selectKarateRank": "Choisir le grade de karaté",
+  "karateRank": "Grade de karaté",
   "KYU_10": "10e Kyu",
   "KYU_9": "9e Kyu",
   "KYU_8": "8e Kyu",
@@ -96,8 +99,105 @@
   "DAN_9": "9e Dan",
   "DAN_10": "10e Dan",
 
-  "city": "Ville",
-  "street": "Rue",
-  "number": "Numéro",
-  "postalCode": "Code postal"
+  "trainingCalendar": "Calendrier des entraînements",
+  "totalTrainings": "Total des entraînements",
+  "upcoming": "À venir",
+  "lastSession": "Dernière séance",
+  "today": "Aujourd’hui",
+  "prev": "← Précédent",
+  "next": "Suivant →",
+  "noTrainings": "Aucun entraînement planifié.",
+  "noTrainingsOnThisDay": "Aucun entraînement ce jour-là.",
+  "pastTrainings": "Entraînements passés",
+  "noPastTrainings": "Aucun entraînement passé.",
+  "createNewTraining": "Créer un nouvel entraînement",
+  "description": "Description",
+  "enterTrainingDescription": "Saisir la description de l’entraînement",
+  "dateAndTime": "Date et heure",
+  "creating": "Création...",
+  "createTraining": "Créer l’entraînement",
+  "recentCreatedTrainings": "Entraînements récemment créés",
+  "noTrainingsYet": "Pas encore d’entraînements.",
+  "failedToCreateTraining": "Échec de la création de l’entraînement",
+  "failedToLoadTrainings": "Échec du chargement des entraînements",
+
+  "myTrainings": "Mes entraînements",
+  "enrollmentsAdmin": "Inscriptions (admin)",
+  "enroll": "S’inscrire",
+  "unenroll": "Se désinscrire",
+  "enrolled": "Inscrit",
+  "byTraining": "Par entraînement",
+  "byUser": "Par utilisateur",
+  "selectTraining": "Choisir un entraînement",
+  "enrollmentId": "ID d’inscription",
+  "userId": "ID utilisateur",
+  "trainingId": "ID d’entraînement",
+  "startTime": "Heure de début",
+  "endTime": "Heure de fin",
+  "viewParticipants": "Voir les participants",
+  "loadParticipants": "Charger les participants",
+  "noParticipants": "Aucun participant",
+  "participant": "Participant",
+  "participants": "Participants",
+  "enterUserIdToProceed": "Saisir l’ID utilisateur pour continuer",
+
+  "myFeedbacks": "Mes avis",
+  "feedbacksAdmin": "Avis (admin)",
+  "giveFeedback": "Donner un avis",
+  "editFeedback": "Modifier l’avis",
+  "giveOrEditFeedback": "Donner ou modifier un avis",
+  "feedback": "Avis",
+  "feedbackId": "ID de l’avis",
+  "feedbackForTraining": "Avis pour l’entraînement",
+  "feedbackSubmitted": "Avis envoyé avec succès",
+  "feedbackUpdated": "Avis mis à jour avec succès",
+  "feedbackFailed": "Échec de l’envoi de l’avis",
+  "feedbackComment": "Commentaire",
+  "feedbackStars": "Étoiles",
+  "feedbackCreatedAt": "Créé le",
+  "feedbackUpdatedAt": "Mis à jour le",
+  "noFeedbacksYet": "Aucun avis pour l’instant",
+  "noFeedbackForThisTraining": "Aucun avis pour cet entraînement",
+  "feedbacksByTraining": "Avis par entraînement",
+  "feedbacksByUser": "Avis par utilisateur",
+  "failedToLoadFeedback": "Échec du chargement des avis",
+  "stars": "Étoiles",
+  "comment": "Commentaire",
+  "viewFeedback": "Voir l’avis",
+
+  "myPayments": "Mes paiements",
+  "paymentsAdmin": "Paiements (admin)",
+  "unpaidSummary": "Résumé des impayés",
+  "unpaidForUser": "Impayés de l’utilisateur",
+  "monthlyFee": "Cotisation mensuelle",
+  "total": "Total",
+  "toPayNow": "À payer",
+  "currencyShort": "PLN",
+  "payNow": "Payer maintenant",
+  "noUnpaidMonths": "Aucun mois impayé 🎉",
+  "paymentHistory": "Historique des paiements",
+  "provider": "Fournisseur",
+  "amount": "Montant",
+  "status": "Statut",
+  "createdAt": "Créé le",
+  "paidAt": "Payé le",
+  "months": "Mois",
+  "paymentCreateFailed": "Échec de la création du paiement",
+  "notLoggedIn": "Non connecté",
+  "paymentStatus": "Statut du paiement",
+  "processing": "Traitement en cours",
+  "paymentCapturedOk": "Paiement confirmé avec succès ✅",
+  "paymentAlreadyProcessed": "Ce paiement a déjà été traité",
+  "paymentCaptureFailed": "Échec de la confirmation du paiement",
+  "goToMyPayments": "Aller à mes paiements",
+  "paymentCancelled": "Paiement annulé",
+  "youCancelledPayment": "Vous avez annulé le paiement.",
+  "selectUser": "Sélectionner un utilisateur",
+  "load": "Charger",
+  "bookManualPayment": "Enregistrer manuellement",
+  "markAsPaidManually": "Marquer comme payé (manuel)",
+  "manualPaymentOk": "Paiement manuel enregistré",
+  "manualPaymentFailed": "Échec de l’enregistrement du paiement manuel",
+  "noPaymentsYet": "Aucun paiement pour l’instant",
+  "date": "Date"
 }
