--- a/frontend/src/locales/ja/translation.json
+++ b/frontend/src/locales/ja/translation.json
@@ -1,80 +1,83 @@
 {
-  "appName": "Karate App",
+  "appName": "空手アプリ",
   "home": "ホーム",
-  "homeTitle": "空手管理",
-  "homeDescription": "空手のトレーニング、クラブ、帯のランクを管理する最新のシステム。",
-  "saving": "保存中...",
-  "saved": "保存しました ✅",
-  "saveAndReturn": "保存してダッシュボードに戻る",
+  "homeTitle": "空手マネジメント",
+  "homeDescription": "空手の稽古・クラブ・段級位を管理するための最新システム。",
   "dashboard": "ダッシュボード",
   "calendar": "カレンダー",
+  "settings": "設定",
+  "languageSettings": "言語設定",
+  "chooseLanguage": "希望する言語を選択",
+  "language": "言語",
+  "loading": "読み込み中…",
+  "saving": "保存中…",
+  "saved": "保存しました ✅",
+  "save": "保存",
+  "saveFailed": "保存に失敗しました",
+  "reset": "リセット",
+  "none": "なし",
+  "noResults": "結果がありません",
+  "failedToLoad": "読み込みに失敗しました",
+  "noPermission": "権限がありません",
+  "goBack": "戻る",
+  "submit": "送信",
+  "cancel": "キャンセル",
+  "close": "閉じる",
+  "details": "詳細",
+  "backToList": "一覧に戻る",
+  "searchFeatures": "機能を検索…",
+
   "quickOverview": "クイック概要",
-  "totalTrainings": "トレーニングの合計",
-  "upcoming": "今後の予定",
-  "lastSession": "最後のセッション",
   "shortcuts": "ショートカット",
   "openCalendar": "カレンダーを開く",
-  "addNewTraining": "新しいトレーニングを追加",
-  "upcomingTrainings": "今後のトレーニング",
-  "noTrainings": "今後のトレーニングは予定されていません。",
-  "languageSettings": "言語設定",
-  "chooseLanguage": "希望する言語を選択してください",
-  "language": "言語",
-  "settings": "設定",
+  "addNewTraining": "新しい稽古を追加",
+  "upcomingTrainings": "今後の稽古",
   "admins": "管理者",
   "users": "ユーザー",
-  "clubMembersOverview": "クラブメンバーの概要",
-  "trainingCalendar": "トレーニングカレンダー",
-  "loading": "読み込み中...",
-  "prev": "← 前へ",
-  "next": "次へ →",
-  "today": "今日",
-  "noTrainingsOnThisDay": "この日のトレーニングはありません。",
-  "pastTrainings": "過去のトレーニング",
-  "noPastTrainings": "過去のトレーニングはありません。",
-  "none": "なし",
-
-  "createNewTraining": "新しいトレーニングを作成",
-  "description": "説明",
-  "enterTrainingDescription": "トレーニングの説明を入力してください",
-  "dateAndTime": "日時",
-  "creating": "作成中...",
-  "createTraining": "トレーニングを作成",
-  "recentCreatedTrainings": "最近作成されたトレーニング",
-  "noTrainingsYet": "まだトレーニングがありません。",
-  "failedToCreateTraining": "トレーニングの作成に失敗しました",
-
-  "noValidClubSelected": "有効なクラブが選択されていません。",
-  "failedToFetchUsers": "ユーザーの取得に失敗しました。",
-  "loadingUsers": "ユーザーを読み込み中...",
-  "no": "なし",
-  "found": "見つかりました",
-
-  "username": "ユーザー名",
-  "email": "メール",
-  "roles": "役割",
-  "karateRank": "空手の段位",
+  "clubMembersOverview": "クラブ会員の概要",
+  "profile": "プロフィール",
+  "profileSettings": "プロフィール設定",
+  "profileSettingsSubtitle": "個人情報の確認と更新ができます。",
+  "dangerZone": "危険ゾーン",
+  "deleteAccount": "アカウントを削除",
+  "typeUsernameToConfirmDelete": "削除確認のためユーザー名を入力してください",
+  "confirmDeleteAccount": "本当にアカウントを完全に削除しますか？",
+  "failedToLoadUser": "ユーザーの読み込みに失敗しました",
 
   "selectKarateClub": "空手クラブを選択",
   "login": "ログイン",
   "password": "パスワード",
-  "loggingInAs": "としてログインしています",
+  "loggingInAs": "次のユーザーでログイン中",
   "noClubSelected": "空手クラブが選択されていません",
-  "loginFailed": "ログインに失敗しました。情報を確認して再試行してください。",
+  "loginFailed": "ログインに失敗しました。認証情報を確認して再試行してください。",
   "register": "登録",
   "registrationFailed": "登録に失敗しました。もう一度お試しください。",
   "changeClub": "クラブを変更",
 
+  "karateClubName": "空手クラブ名",
+  "fieldIsImmutable": "この項目は変更できません",
+  "noValidClubSelected": "有効なクラブが選択されていません。",
+  "failedToFetchUsers": "ユーザーの取得に失敗しました。",
+  "loadingUsers": "ユーザーを読み込み中…",
   "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "ウッチ沖縄少林流空手・古武道センター",
-  "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "ピアセチン沖縄少林流空手クラブ",
+  "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "ピアセチノ沖縄少林流空手クラブ",
   "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "ウォウォミン少林流空手クラブ",
-  "MIECHOWSKI_KLUB_SHORIN_RYU_KARATE": "ミエホフ少林流空手クラブ",
-  "LUBELSKA_AKADEMIA_SPORTU": "ルブリンスポーツアカデミー",
+  "MIECHOWSKI_KLUB_SHORIN_RYU_KARATE": "ミェフフ少林流空手クラブ",
+  "LUBELSKA_AKADEMIA_SPORTU": "ルブリン・スポーツ・アカデミー",
   "GDANSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "グダニスク沖縄少林流空手クラブ",
-  "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "タルノフ空手古武道アカデミー",
+  "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "タルヌフ空手・古武道アカデミー",
   "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "ワルシャワ沖縄空手道クラブ",
 
-  "selectKarateRank": "空手の段位を選択",
+  "username": "ユーザー名",
+  "email": "メール",
+  "roles": "ロール",
+  "city": "市区町村",
+  "street": "番地・通り",
+  "number": "番号",
+  "postalCode": "郵便番号",
+
+  "selectKarateRank": "段級位を選択",
+  "karateRank": "段級位",
   "KYU_10": "10級",
   "KYU_9": "9級",
   "KYU_8": "8級",
@@ -96,8 +99,105 @@
   "DAN_9": "九段",
   "DAN_10": "十段",
 
-  "city": "市区町村",
-  "street": "通り",
-  "number": "番地",
-  "postalCode": "郵便番号"
+  "trainingCalendar": "稽古カレンダー",
+  "totalTrainings": "稽古総数",
+  "upcoming": "近日",
+  "lastSession": "前回の稽古",
+  "today": "今日",
+  "prev": "← 前へ",
+  "next": "次へ →",
+  "noTrainings": "予定されている稽古はありません。",
+  "noTrainingsOnThisDay": "この日の稽古はありません。",
+  "pastTrainings": "過去の稽古",
+  "noPastTrainings": "過去の稽古はありません。",
+  "createNewTraining": "新しい稽古を作成",
+  "description": "説明",
+  "enterTrainingDescription": "稽古の説明を入力",
+  "dateAndTime": "日時",
+  "creating": "作成中…",
+  "createTraining": "稽古を作成",
+  "recentCreatedTrainings": "最近作成された稽古",
+  "noTrainingsYet": "まだ稽古がありません。",
+  "failedToCreateTraining": "稽古の作成に失敗しました",
+  "failedToLoadTrainings": "稽古の読み込みに失敗しました",
+
+  "myTrainings": "自分の稽古",
+  "enrollmentsAdmin": "参加登録（管理）",
+  "enroll": "参加する",
+  "unenroll": "参加取消",
+  "enrolled": "参加済み",
+  "byTraining": "稽古別",
+  "byUser": "ユーザー別",
+  "selectTraining": "稽古を選択",
+  "enrollmentId": "参加ID",
+  "userId": "ユーザーID",
+  "trainingId": "稽古ID",
+  "startTime": "開始時刻",
+  "endTime": "終了時刻",
+  "viewParticipants": "参加者を見る",
+  "loadParticipants": "参加者を読み込む",
+  "noParticipants": "参加者はいません",
+  "participant": "参加者",
+  "participants": "参加者",
+  "enterUserIdToProceed": "続行するにはユーザーIDを入力",
+
+  "myFeedbacks": "自分のフィードバック",
+  "feedbacksAdmin": "フィードバック（管理）",
+  "giveFeedback": "フィードバックを送る",
+  "editFeedback": "フィードバックを編集",
+  "giveOrEditFeedback": "フィードバックを送信／編集",
+  "feedback": "フィードバック",
+  "feedbackId": "フィードバックID",
+  "feedbackForTraining": "稽古のフィードバック",
+  "feedbackSubmitted": "フィードバックを送信しました",
+  "feedbackUpdated": "フィードバックを更新しました",
+  "feedbackFailed": "フィードバックの送信に失敗しました",
+  "feedbackComment": "コメント",
+  "feedbackStars": "評価（星）",
+  "feedbackCreatedAt": "作成日時",
+  "feedbackUpdatedAt": "更新日時",
+  "noFeedbacksYet": "まだフィードバックはありません",
+  "noFeedbackForThisTraining": "この稽古のフィードバックはまだありません",
+  "feedbacksByTraining": "稽古別フィードバック",
+  "feedbacksByUser": "ユーザー別フィードバック",
+  "failedToLoadFeedback": "フィードバックの読み込みに失敗しました",
+  "stars": "星",
+  "comment": "コメント",
+  "viewFeedback": "フィードバックを見る",
+
+  "myPayments": "自分の支払い",
+  "paymentsAdmin": "支払い（管理）",
+  "unpaidSummary": "未払いの概要",
+  "unpaidForUser": "ユーザーの未払い",
+  "monthlyFee": "月会費",
+  "total": "合計",
+  "toPayNow": "支払額",
+  "currencyShort": "PLN",
+  "payNow": "今すぐ支払う",
+  "noUnpaidMonths": "未払いの月はありません 🎉",
+  "paymentHistory": "支払い履歴",
+  "provider": "プロバイダー",
+  "amount": "金額",
+  "status": "ステータス",
+  "createdAt": "作成日時",
+  "paidAt": "支払日時",
+  "months": "対象月",
+  "paymentCreateFailed": "支払いの作成に失敗しました",
+  "notLoggedIn": "ログインしていません",
+  "paymentStatus": "支払いステータス",
+  "processing": "処理中",
+  "paymentCapturedOk": "支払いを正常に確定しました ✅",
+  "paymentAlreadyProcessed": "この支払いは既に処理済みです",
+  "paymentCaptureFailed": "支払いの確定に失敗しました",
+  "goToMyPayments": "自分の支払いへ",
+  "paymentCancelled": "支払いをキャンセルしました",
+  "youCancelledPayment": "支払いを取り消しました。",
+  "selectUser": "ユーザーを選択",
+  "load": "読み込む",
+  "bookManualPayment": "手動で計上",
+  "markAsPaidManually": "手動で支払い済みにする",
+  "manualPaymentOk": "手動支払いを保存しました",
+  "manualPaymentFailed": "手動支払いの保存に失敗しました",
+  "noPaymentsYet": "まだ支払いはありません",
+  "date": "日付"
 }
