--- a/frontend/src/locales/pl/translation.json
+++ b/frontend/src/locales/pl/translation.json
@@ -1,70 +1,64 @@
 {
-  "appName": "Karate App",
+  "appName": "Aplikacja Karate",
   "home": "Strona główna",
   "homeTitle": "Zarządzanie Karate",
-  "homeDescription": "Nowoczesny system do zarządzania treningami karate, klubami i stopniami.",
+  "homeDescription": "Nowoczesny system do zarządzania treningami, klubami i stopniami karate.",
+  "dashboard": "Panel główny",
+  "calendar": "Kalendarz",
+  "settings": "Ustawienia",
+  "languageSettings": "Ustawienia języka",
+  "chooseLanguage": "Wybierz preferowany język",
+  "language": "Język",
+  "loading": "Ładowanie...",
   "saving": "Zapisywanie...",
   "saved": "Zapisano ✅",
-  "saveAndReturn": "Zapisz i wróć do panelu",
-  "dashboard": "Panel",
-  "calendar": "Kalendarz",
+  "save": "Zapisz",
+  "saveFailed": "Błąd zapisu",
+  "reset": "Resetuj",
+  "none": "Brak",
+  "noResults": "Brak wyników",
+  "failedToLoad": "Nie udało się załadować",
+  "noPermission": "Brak uprawnień",
+  "goBack": "Wróć",
+  "submit": "Zatwierdź",
+  "cancel": "Anuluj",
+  "close": "Zamknij",
+  "details": "Szczegóły",
+  "backToList": "Powrót do listy",
+  "searchFeatures": "Wyszukaj...",
+
   "quickOverview": "Szybki podgląd",
-  "totalTrainings": "Łączna liczba treningów",
-  "upcoming": "Nadchodzące",
-  "lastSession": "Ostatnia sesja",
   "shortcuts": "Skróty",
   "openCalendar": "Otwórz kalendarz",
   "addNewTraining": "Dodaj nowy trening",
   "upcomingTrainings": "Nadchodzące treningi",
-  "noTrainings": "Brak zaplanowanych nadchodzących treningów.",
-  "languageSettings": "Ustawienia języka",
-  "chooseLanguage": "Wybierz preferowany język",
-  "language": "Język",
-  "settings": "Ustawienia",
   "admins": "Administratorzy",
   "users": "Użytkownicy",
-  "clubMembersOverview": "Przegląd członków klubu",
-  "trainingCalendar": "Kalendarz treningów",
-  "loading": "Ładowanie...",
-  "prev": "← Poprzedni",
-  "next": "Następny →",
-  "today": "Dziś",
-  "noTrainingsOnThisDay": "Brak treningów w tym dniu.",
-  "pastTrainings": "Minione treningi",
-  "noPastTrainings": "Brak minionych treningów.",
-  "none": "Brak",
-
-  "createNewTraining": "Utwórz nowy trening",
-  "description": "Opis",
-  "enterTrainingDescription": "Wpisz opis treningu",
-  "dateAndTime": "Data i godzina",
-  "creating": "Tworzenie...",
-  "createTraining": "Utwórz trening",
-  "recentCreatedTrainings": "Ostatnio utworzone treningi",
-  "noTrainingsYet": "Brak treningów.",
-  "failedToCreateTraining": "Nie udało się utworzyć treningu",
-
-  "noValidClubSelected": "Nie wybrano poprawnego klubu.",
-  "failedToFetchUsers": "Nie udało się pobrać użytkowników.",
-  "loadingUsers": "Ładowanie użytkowników...",
-  "no": "Brak",
-  "found": "znaleziono",
-
-  "username": "Nazwa użytkownika",
-  "email": "Email",
-  "roles": "Role",
-  "karateRank": "Stopień karate",
+  "clubMembersOverview": "Podgląd członków klubu",
+  "profile": "Profil",
+  "profileSettings": "Ustawienia profilu",
+  "profileSettingsSubtitle": "Zobacz i edytuj swoje dane osobowe.",
+  "dangerZone": "Strefa zagrożenia",
+  "deleteAccount": "Usuń konto",
+  "typeUsernameToConfirmDelete": "Wpisz swoją nazwę użytkownika, aby potwierdzić usunięcie konta",
+  "confirmDeleteAccount": "Czy na pewno chcesz trwale usunąć konto?",
+  "failedToLoadUser": "Nie udało się załadować użytkownika",
 
   "selectKarateClub": "Wybierz klub karate",
   "login": "Zaloguj się",
   "password": "Hasło",
-  "loggingInAs": "Logujesz się jako",
+  "loggingInAs": "Logowanie jako",
   "noClubSelected": "Nie wybrano klubu karate",
-  "loginFailed": "Nie udało się zalogować. Sprawdź dane i spróbuj ponownie.",
+  "loginFailed": "Logowanie nieudane. Sprawdź dane i spróbuj ponownie.",
   "register": "Zarejestruj się",
-  "registrationFailed": "Rejestracja nie powiodła się. Spróbuj ponownie.",
+  "registrationFailed": "Rejestracja nieudana. Spróbuj ponownie.",
   "changeClub": "Zmień klub",
 
+  "karateClubName": "Nazwa klubu karate",
+  "fieldIsImmutable": "To pole nie może być zmienione",
+  "noValidClubSelected": "Nie wybrano poprawnego klubu.",
+  "failedToFetchUsers": "Nie udało się pobrać użytkowników.",
+  "loadingUsers": "Ładowanie użytkowników...",
   "LODZKIE_CENTRUM_OKINAWA_SHORIN_RYU_KARATE_I_KOBUDO": "Łódzkie Centrum Okinawa Shorin Ryu Karate i Kobudo",
   "PIASECZYNSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Piaseczyński Klub Okinawa Shorin Ryu Karate",
   "WOLOMINSKI_KLUB_SHORIN_RYU_KARATE": "Wołomiński Klub Shorin Ryu Karate",
@@ -72,32 +66,138 @@
   "LUBELSKA_AKADEMIA_SPORTU": "Lubelska Akademia Sportu",
   "GDANSKI_KLUB_OKINAWA_SHORIN_RYU_KARATE": "Gdański Klub Okinawa Shorin Ryu Karate",
   "TARNOWSKA_AKADEMIA_KARATE_I_KOBUDO": "Tarnowska Akademia Karate i Kobudo",
-  "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Klub Okinawa Karate Do Warszawa",
+  "KLUB_OKINAWA_KARATE_DO_WARSZAWA": "Warszawski Klub Okinawa Karate Do",
 
-  "selectKarateRank": "Wybierz stopień karate",
-  "KYU_10": "10. Kyu",
-  "KYU_9": "9. Kyu",
-  "KYU_8": "8. Kyu",
-  "KYU_7": "7. Kyu",
-  "KYU_6": "6. Kyu",
-  "KYU_5": "5. Kyu",
-  "KYU_4": "4. Kyu",
-  "KYU_3": "3. Kyu",
-  "KYU_2": "2. Kyu",
-  "KYU_1": "1. Kyu",
-  "DAN_1": "1. Dan",
-  "DAN_2": "2. Dan",
-  "DAN_3": "3. Dan",
-  "DAN_4": "4. Dan",
-  "DAN_5": "5. Dan",
-  "DAN_6": "6. Dan",
-  "DAN_7": "7. Dan",
-  "DAN_8": "8. Dan",
-  "DAN_9": "9. Dan",
-  "DAN_10": "10. Dan",
-
+  "username": "Nazwa użytkownika",
+  "email": "E-mail",
+  "roles": "Role",
   "city": "Miasto",
   "street": "Ulica",
-  "number": "Numer domu",
-  "postalCode": "Kod pocztowy"
+  "number": "Numer",
+  "postalCode": "Kod pocztowy",
+
+  "selectKarateRank": "Wybierz stopień karate",
+  "karateRank": "Stopień karate",
+  "KYU_10": "10 Kyu",
+  "KYU_9": "9 Kyu",
+  "KYU_8": "8 Kyu",
+  "KYU_7": "7 Kyu",
+  "KYU_6": "6 Kyu",
+  "KYU_5": "5 Kyu",
+  "KYU_4": "4 Kyu",
+  "KYU_3": "3 Kyu",
+  "KYU_2": "2 Kyu",
+  "KYU_1": "1 Kyu",
+  "DAN_1": "1 Dan",
+  "DAN_2": "2 Dan",
+  "DAN_3": "3 Dan",
+  "DAN_4": "4 Dan",
+  "DAN_5": "5 Dan",
+  "DAN_6": "6 Dan",
+  "DAN_7": "7 Dan",
+  "DAN_8": "8 Dan",
+  "DAN_9": "9 Dan",
+  "DAN_10": "10 Dan",
+
+  "trainingCalendar": "Kalendarz treningów",
+  "totalTrainings": "Liczba treningów",
+  "upcoming": "Nadchodzące",
+  "lastSession": "Ostatni trening",
+  "today": "Dzisiaj",
+  "prev": "← Poprzedni",
+  "next": "Następny →",
+  "noTrainings": "Brak zaplanowanych treningów.",
+  "noTrainingsOnThisDay": "Brak treningów w tym dniu.",
+  "pastTrainings": "Zakończone treningi",
+  "noPastTrainings": "Brak zakończonych treningów.",
+  "createNewTraining": "Utwórz nowy trening",
+  "description": "Opis",
+  "enterTrainingDescription": "Wprowadź opis treningu",
+  "dateAndTime": "Data i godzina",
+  "creating": "Tworzenie...",
+  "createTraining": "Utwórz trening",
+  "recentCreatedTrainings": "Ostatnio utworzone treningi",
+  "noTrainingsYet": "Brak treningów.",
+  "failedToCreateTraining": "Nie udało się utworzyć treningu",
+  "failedToLoadTrainings": "Nie udało się załadować treningów",
+
+  "myTrainings": "Moje treningi",
+  "enrollmentsAdmin": "Zapisy (admin)",
+  "enroll": "Zapisz się",
+  "unenroll": "Wypisz się",
+  "enrolled": "Zapisany",
+  "byTraining": "Według treningu",
+  "byUser": "Według użytkownika",
+  "selectTraining": "Wybierz trening",
+  "enrollmentId": "ID zapisu",
+  "userId": "ID użytkownika",
+  "trainingId": "ID treningu",
+  "startTime": "Początek",
+  "endTime": "Koniec",
+  "viewParticipants": "Zobacz uczestników",
+  "loadParticipants": "Załaduj uczestników",
+  "noParticipants": "Brak uczestników",
+  "participant": "Uczestnik",
+  "participants": "Uczestnicy",
+  "enterUserIdToProceed": "Podaj ID użytkownika, aby kontynuować",
+
+  "myFeedbacks": "Moje opinie",
+  "feedbacksAdmin": "Opinie (admin)",
+  "giveFeedback": "Dodaj opinię",
+  "editFeedback": "Edytuj opinię",
+  "giveOrEditFeedback": "Dodaj lub edytuj opinię",
+  "feedback": "Opinia",
+  "feedbackId": "ID opinii",
+  "feedbackForTraining": "Opinia o treningu",
+  "feedbackSubmitted": "Opinia została wysłana",
+  "feedbackUpdated": "Opinia została zaktualizowana",
+  "feedbackFailed": "Nie udało się wysłać opinii",
+  "feedbackComment": "Komentarz",
+  "feedbackStars": "Ocena",
+  "feedbackCreatedAt": "Utworzono",
+  "feedbackUpdatedAt": "Zaktualizowano",
+  "noFeedbacksYet": "Brak opinii",
+  "noFeedbackForThisTraining": "Brak opinii dla tego treningu",
+  "feedbacksByTraining": "Opinie według treningu",
+  "feedbacksByUser": "Opinie według użytkownika",
+  "failedToLoadFeedback": "Nie udało się załadować opinii",
+  "stars": "Ocena",
+  "comment": "Komentarz",
+  "viewFeedback": "Zobacz opinię",
+
+  "myPayments": "Moje płatności",
+  "paymentsAdmin": "Płatności (admin)",
+  "unpaidSummary": "Podsumowanie zaległości",
+  "unpaidForUser": "Zaległości użytkownika",
+  "monthlyFee": "Miesięczna opłata",
+  "total": "Razem",
+  "toPayNow": "Do zapłaty",
+  "currencyShort": "PLN",
+  "payNow": "Zapłać teraz",
+  "noUnpaidMonths": "Brak zaległych miesięcy 🎉",
+  "paymentHistory": "Historia płatności",
+  "provider": "Dostawca",
+  "amount": "Kwota",
+  "status": "Status",
+  "createdAt": "Utworzono",
+  "paidAt": "Opłacono",
+  "months": "Miesiące",
+  "paymentCreateFailed": "Nie udało się utworzyć płatności",
+  "notLoggedIn": "Nie zalogowano",
+  "paymentStatus": "Status płatności",
+  "processing": "Przetwarzanie",
+  "paymentCapturedOk": "Płatność zakończona pomyślnie ✅",
+  "paymentAlreadyProcessed": "Ta płatność została już przetworzona",
+  "paymentCaptureFailed": "Nie udało się potwierdzić płatności",
+  "goToMyPayments": "Przejdź do moich płatności",
+  "paymentCancelled": "Płatność anulowana",
+  "youCancelledPayment": "Anulowałeś płatność.",
+  "selectUser": "Wybierz użytkownika",
+  "load": "Załaduj",
+  "bookManualPayment": "Zaksięguj ręcznie",
+  "markAsPaidManually": "Oznacz jako opłacone (ręcznie)",
+  "manualPaymentOk": "Ręczna płatność zapisana",
+  "manualPaymentFailed": "Nie udało się zapisać ręcznej płatności",
+  "noPaymentsYet": "Brak płatności",
+  "date": "Data"
 }
